Updated ui changes

--- a/app.json
+++ b/app.json
@@ -24,6 +24,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5043617d-6396-40b3-b230-5599c4ff7440"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/5043617d-6396-40b3-b230-5599c4ff7440"
     }
   }
 }
