--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-safe-area-context": "^5.5.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4",
+    "expo-updates": "~0.28.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
